2011-12-05  Mike Frysinger  <vapier@gentoo.org>

  * src/apps/jtag/jtag.c: Simplify readline ifdefs a little as suggested
    by MÃ¡rton NÃ©meth.

2011-11-16  Jie Zhang  <jie.zhang@analog.com>

  * data/analog/PARTS: Update comment.

2011-11-11  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/bfin.h (part_bypass): Remove declaration.

2011-11-06  Uwe Hermann  <uwe@hermann-uwe.de>

  * data/toshiba/tmpa9xx/tmpa9xx, data/toshiba/tmpa9xx/STEPPINGS: Add stepping
    and basic JTAG register/instruction info for Toshiba TMPA9xx series
    microcontrollers (ARM9 / ARM926EJ-S).
  * data/toshiba/PARTS: Add entry for Toshiba TMPA9xx.
  * data/Makefile.am: Add new STEPPINGS and tmpa9xx files.

2011-11-06  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx9/STEPPINGS: Add Xilinux Spartan 6 stepping 0 by
    Ralph Loader.

2011-10-24  Jie Zhang  <jie.zhang@analog.com>

  * data/analog/bf592/STEPPINGS: Add silicon revision 0.2.

2011-10-19  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/bfin.h (chain_scan_select): Remove declaration.
    (DECLARE_CHAIN_DBGCTL_SET_BIT): Remove.
    (DECLARE_CHAIN_DBGCTL_CLEAR_BIT): Remove.
    (DECLARE_DBGCTL_BIT_OP): Don't use the above two.
    (chain_dbgstat_get): Remove declaration.
    (chain_emupc_get): Likewise.
    (chain_dbgstat_clear_ovfs): Likewise.
    (chain_check_emuready): Likewise.
    (chain_wait_in_reset): Likewise.
    (chain_wait_reset): Likewise.
    (chain_register_get): Likewise.
    (chain_register_set): Likewise.
    (chain_register_set_same): Likewise.
    (chain_emuir_set_same): Likewise.
    (chain_emuir_set_same_2): Likewise.
    (chain_emulation_enable): Likewise.
    (chain_emulation_disable): Likewise.
    (chain_emulation_trigger): Likewise.
    (chain_emulation_return): Likewise.
    (chain_emupc_reset): Likewise.
    (bfin_core_reset): Add a new parameter.
    (software_reset): Likewise.
    (part_emupc_reset): Declare.
  * src/cmd/cmd_bfin.c (cmd_bfin_run): Pass chain->active_part as