@@ -45,7 +45,7 @@ void urj_tap_shift_register (urj_chain_t *chain,
 
 /** API functions */
 /** @return number of detected parts on success; -1 on error */
-int urj_tap_detect_parts (urj_chain_t *chain, const char *db_path);
+int urj_tap_detect_parts (urj_chain_t *chain, const char *db_path, int maxirlen);
 /** @return chain length on success; -1 on error */
 int urj_tap_manual_add_at (urj_chain_t *chain, int n, char *name, int instr_len);
 /** @return chain length on success; -1 on error */
@@ -55,7 +55,7 @@ int urj_tap_manual_remove (urj_chain_t *chain, int n);
 /** @return URJ_STATUS_OK on success; URJ_STATUS_FAIL on error */
 int urj_tap_manual_init (urj_chain_t *chain, char *data_path);
 /** @return register size on success; -1 on error */
-int urj_tap_detect_register_size (urj_chain_t *chain);
+int urj_tap_detect_register_size (urj_chain_t *chain, int maxlen);
 /** @return URJ_STATUS_OK on success; URJ_STATUS_FAIL on error */
 int urj_tap_discovery (urj_chain_t *chain);
 /** @return URJ_STATUS_OK on success; URJ_STATUS_FAIL on error */
@@ -65,9 +65,11 @@ int urj_tap_idcode (urj_chain_t *chain, unsigned int bytes);
 /**
  * Convenience function that detects the parts, initialises them to BYPASS,
  * and initialises the bus drivers.
+ * maxirlen is the maximum expected length of all concatenated instruction 
+ * registers on the chain.  If set to 0, a default is assumed.
  *
  * @return URJ_STATUS_OK on success; URJ_STATUS_FAIL on error
  */
-int urj_tap_detect (urj_chain_t *chain);
+int urj_tap_detect (urj_chain_t *chain, int maxirlen);
 
 #endif /* URJ_TAP_H */
