@@ -51,7 +51,7 @@ cmd_detect_run (urj_chain_t *chain, char *params[])
 
     urj_tap_trst_reset (chain);
 
-    if (urj_tap_detect (chain) != URJ_STATUS_OK)
+    if (urj_tap_detect (chain, 0) != URJ_STATUS_OK)
         return URJ_STATUS_FAIL;
 
     return URJ_STATUS_OK;
